changed EmailService to EmailServiceChaima to avoid git conflicts